--- a/card.html
+++ b/card.html
@@ -8,8 +8,12 @@
   <link rel="stylesheet" href="card.css">
 </head>
 <body>
-  <div>
+  <div class="div1">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum neque doloribus facere, distinctio eum quisquam sapiente minus asperiores nam omnis nulla. Facilis totam reprehenderit enim, quos aut atque eligendi, excepturi possimus iure, iste tenetur dolore!
+  </div>
+
+  <div>
+    <button>Following</button>
   </div>
 </body>
 </html>
