--- a/flexbox.html
+++ b/flexbox.html
@@ -3,14 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flexbox</title>
+  <title>Document</title>
   <link rel="stylesheet" href="flexbox.css">
 </head>
 <body>
-  <div class="nav-wrapper">
-    <div class="item">Shoes</div>
-    <div class="item">Hoodies</div>
-    <div class="item">T-shirts</div>
+  
+  <h1>Upgrade to Pro</h1>
+
+  <div class="target">
+
+    <div>
+      <h2>For Individuals</h2>
+      <ul>
+        <li>1 gb</li>
+        <li>No Support</li>
+      </ul>
+      <button>Buy now</button>
+    </div>
+
+    <div>
+      <h2>For Enterprise</h2>
+      <ul>
+        <li>10 gb</li>
+        <li>Priority Support</li>
+        <button>Contact us</button>
+      </ul>
+    </div>
+
   </div>
 </body>
 </html>
