--- a/buisnessCard.html
+++ b/buisnessCard.html
@@ -7,11 +7,19 @@
   <link rel="stylesheet" href="buisnessCard.css">
 </head>
 <body>
-  <div class="card">
-  <img src="my image.jpg" class="avatar" alt="chitran">
-  <h1>Chitran chakraborty</h1>
-  <h2>Frontend Developer</h2>
-  <h2>Kolkata,India</h2>
+  <div class="card dotted">
+
+    <div class="dotted">
+      <img src="my image.jpg" class="avatar" alt="chitran">
+    </div>
+
+    <div class="dotted">
+      <h1>Chitran chakraborty</h1>
+      <h2>Frontend Developer</h2>
+      <h2>Kolkata,India</h2>
+    </div>
+
   </div>
+
 </body>
 </html>
