--- a/index.html
+++ b/index.html
@@ -3,41 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Birthday</title>
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Varela+Round&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  <div>
-  <h1>Hi there</h1>
-  <h2>Chitran</h2>
-  <h1>Human reached</h1>
-  <h3>hi there</h3>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut in ab ratione repellat obcaecati optio similique mollitia, expedita aliquid harum corrupti architecto qui explicabo ex. Aut voluptatum commodi culpa facilis?</p>
-  <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg" width="100%" alt="fox">
-  <div>
-    <img src="https://www.theodinproject.com/assets/icons/odin-icon-22b41941.svg
-  " width="100%" alt="">
+  <div class="header">
+    <h1>Today is Chitran's birthday🥳</h1>
+    <img src="my image.jpg" id="bff" alt="">
+    <h2 class="year">22 years</h2>
+    <h4>21/05/2004</h4>
   </div>
 
-</div>
-<button>Busy</button>
+  <div class="gift-section">
+    <h2 class="hint">Here's how happy I am for you today.💌</h2>
+    <h3 class="hover">(Hover over the gift)</h3>
+    <div><img class="birthday-image" alt=""></div>
+  </div>
 
-<h1>Welcome</h1>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, laborum.d</p>
-<button>Sign Up!</button>
+  <div class="gift-section2">
+    <h2 class="hint2">How people react when you enter the room.🥳</h2>
+    <div><img class="birthday-image2" alt=""></div>
+  </div>
 
-<input type="text" placeholder="Enter password">
-<input type="color" placeholder="Enter your password">
+  <div class="gift-section3">
+    <h2 class="hint3">If I had to describe you with one word🙂</h2>
+    <div><img class="birthday-image3" alt=""></div>
+  </div>
+  
 
-<input type="file">
+  <div class="gift-section4">
+    <h2 class="hint4">The only person as badass as you🔺</h2>
+    <div><img class="birthday-image4" alt=""></div>
+  </div>
 
+  <div class="gift-section5">
+    <h2 class="hint5">This one is for you my friend🚀</h2>
+    <div><img class="birthday-image5" alt=""></div>
+  </div>
 
-<h1>Chitran Chakraborty</h1>
-<p>Developer | teacher | Procrastinator</p>
-<a href="work.html">Check my projects</a>
-
-<p>Lorem ipsum dolor sit 
-  <a href="https://www.google.com" target="_blank">amet</a>
-</p>
+  <footer class="footer">
+    <h3 id="footer-id">Want to create this kind of birthday gifts? Take this <a href="https://www.google.com" target="_blank" class="link-a">HTML and CSS course</a> </h3>
+  </footer>
+    
 
 </body>
 </html>
