--- a/buisnessCard.html
+++ b/buisnessCard.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="buisnessCard.css">
+  
 </head>
 <body>
-  <div class="card dotted">
+  <div class="card liquid-morph-container">
 
     <div class="dotted">
       <img src="my image.jpg" class="avatar" alt="chitran">
     </div>
 
-    <div class="dotted">
+    <div class="dotted liquid-morph-element">
       <h1>Chitran chakraborty</h1>
       <h2>Frontend Developer</h2>
       <h2>Kolkata,India</h2>
